Arbeiten am Event-Calender
Event-Calendar weitestgehend an die Bedürfnisse des Templates angepasst.

--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1033,7 +1033,7 @@ footer {
     -ms-transition:     all 1000ms ease !important;
 }
 
-#content h1, #content h2, #content h3 {
+#content h1, #content h2, #content h3, .tribe-events-title-bar h1 {
     border: none;
     padding-top: 2rem;
     margin-bottom: 0.6rem;
@@ -1049,12 +1049,14 @@ footer {
     margin-left: 20px;
 }
 
+/**
 #content ul {
     padding-left: 24px;
     list-style: none;
     text-indent: -1em;
     margin-left: 1em;
 }
+
 
 #content ul li:before {
     background-color: #61B732;
@@ -1066,13 +1068,17 @@ footer {
     height: 7px;
     width: 7px;
 }
+**/
+
 
 #content ul.wp-block-gallery{
     margin-left: 0px;
     padding-left: 0;
 }
 
-#content ul.wp-block-gallery li:before {
+#content ul.wp-block-gallery li:before,
+#content ul.tribe-bar-views-list li:before,
+#content .tribe-bar-events-notices ul li:before {
     background: none;
 }
 
@@ -1134,6 +1140,45 @@ ul .wp-block-gallery {
     margin-left: 0;
 }
 
-#content ul .wp-block-gallery li:before {
+#content ul .wp-block-gallery li:before, #content ul .tribe-bar-views-list li:before {
     list-style: none;
+}
+
+
+/** EVENTS CALENDAR **/
+
+.tribe-events-button {
+    background: #61B732 !important;
+}
+
+#tribe-bar-form {
+    background: #fff !important;
+}
+
+.tribe-events-notices {
+    background: #D8EDCC !important;
+    border-radius: 0px !important;
+    border: none !important;
+    color: #000 !important;
+    margin: 10px 0 18px !important;
+    padding: 8px 35px 8px 14px !important;
+    text-shadow: none !important;
+}
+
+.tribe-events-list-separator-month {
+    background-color: #fff !important;
+    display: block !important;
+    font-size: 1.6rem !important;
+    font-weight: 500 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    text-transform: none !important;
+}
+
+.tribe-events-after-html {
+    margin-top: 2em;
+}
+
+.tribe-events-meta-group {
+    padding: 0 !important;
 }
