--- a/style.css
+++ b/style.css
@@ -202,39 +202,23 @@ Text Domain: deutscheralpenverein
     padding: 0;
 }
 
-.tour-month {
 
-}
-
-
-.btn-tourenfilter {
-    background: #efefef;
+.btn-tourenfilter, .btn-tourenfilter-delete {
     font-weight: 400;
     font-size: 0.8rem;
-    color: #000;
     margin-bottom: 0.5rem;
     margin-right: 0.5rem;
-    border-radius: 5px;
+    border-radius: 0px;
+    color: #000;
 }
 
 .btn-tourenfilter i {
-    color: #61B732;
-}
-
-.btn-tourenfilter-red {
-    background: #ef080a;
-    font-weight: 400;
-    font-size: 0.8rem;
-    color: #fff;
-    margin-bottom: 0.5rem;
-    margin-right: 0.5rem;
-    border-radius: 5px;
-}
-
-.btn-tourenfilter-red i {
     color: #000;
 }
 
+.btn-tourenfilter-delete {
+    background: #eee;
+}
 
 
 
