--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ Text Domain: deutscheralpenverein
 
 
 
+#top-link {
+    position: fixed;
+    right: 15px;
+    bottom: 85px;
+    text-decoration: none;
+}
 
 /***********/
 /** CARDS **/
