Übersichtsseiten ohne Bilder
Neue Funktionalität eingefügt, mit der Übersichtsseiten auch ohne Bilder auskommen. Kann per True/False aktiviert werden. Standard ist False->DIe Bilder werden angezeigt.

--- a/style.css
+++ b/style.css
@@ -70,6 +70,16 @@ Text Domain: deutscheralpenverein
 }
 
 
+.card-noimage .card-page-overview {
+    background-color: #61B732;
+}
+
+.card-noimage .card-page-overview .news-head {
+    color: #fff;
+}
+
+
+
 /* PERSONAS */
 .card.card-person.col-6,
 .card.card-touren.col-6{
